package edu.sandiego.comp305;

/**
 * Represents whether a trade is a buy or sell.
 */
public enum TradeType {
    BUY,
    SELL
}
