@startuml
!pragma layout smetana
skinparam classAttributeIconSize 0



' ===========================
'            Season
' ===========================
class Season {
    - standings: Map<Team, Integer>
    - teams: List<Team>
    - weeks: List<Week>

    + Season(teams: List<Team>)
    + generateSchedule(): void
    + runSeason(strategy: ScoringStrategy): void
    + updateStandings(match: Match): void
    + getStandings(): Map<Team, Integer>
    + getChampion(): Team
    + getWeeks(): List<Week>
}
' ===========================
'          Simulator
' ===========================
class Simulator {
    + main(args: String[]): void
}

' ===========================
'        FinalResults
' ===========================
class FinalResults {
    + print(season: Season): void
    - printChampion(season: Season): void
    - printStandings(season: Season): void
    - printWeeklyResults(season: Season): void
    - printTeamRosters(season: Season): void
}



' ===========================
'        TradeScrubber
' ===========================
class TradeScrubber {
    + buildTradesFromCSV(path: String): List<Trade>
    - extractCsvRows(csvPath: String): List<String[]>
    - parseCSVLine(line: String): String[]
    - buildTrades(csvRows: List<String[]>): List<Trade>
    - parseType(type: String): TradeType
    - parsePrice(priceString: String): double
    - estimateAmount(range: String): double
    - parseDate(dateString: String): LocalDate
}

' ===========================
'        PoliticianFactory
' ===========================
class PoliticianFactory {
    - scrubber: TradeScrubber
    + PoliticianFactory(scrubber: TradeScrubber)
    + createPoliticianList(path: String): List<Politician>
    - groupTradesByName(trades: List<Trade>): Map<String, List<Trade>>
    - buildEachPolitician(grouped: Map<String, List<Trade>>): List<Politician>
}

' ===========================
'            Trade
' ===========================
class Trade {
    - date: LocalDate
    - ticker: String
    - price: double
    - estimatedAmount: double
    - type: TradeType
    - politicianName: String
    - party: String

    + Trade(date: LocalDate, ticker: String, price: double,
            estimatedAmount: double, type: TradeType,
            politicianName: String, party: String)
}

enum TradeType {
    BUY
    SELL
}

' ===========================
'        TradeHistory
' ===========================
class TradeHistory {
    - trades: List<Trade>
    - seasonStart: LocalDate

    + TradeHistory(trades: List<Trade>, seasonStart: LocalDate)
    + getTrades(): List<Trade>
    + getWeeklyTrades(weekIndex: int): List<Trade>
    + getTotalTradeAmount(): double
}

' ===========================
'         Politician
' ===========================
class Politician {
    - name: String
    - idNumber: int
    - party: String
    - tradeHistory: TradeHistory

    + Politician(name: String, idNumber: int, party: String,
                 tradeHistory: TradeHistory)
    + getName(): String
    + getParty(): String
    + getIdNumber(): int
    + getTradeHistory(): TradeHistory
}

' ===========================
'        DraftManager
' ===========================
class DraftManager {
    - availablePlayers: List<Politician>
    - teams: List<Team>
    - draftOrder: List<Team>
    - rosterLimit: int
    - scanner: Scanner

    + DraftManager(players: List<Politician>, teams: List<Team>, rosterLimit: int)
    + generateDraftOrder(): void
    + runSnakeDraft(): void
    + pickPlayer(team: Team, politician: Politician): void
}

' ===========================
'            Team
' ===========================
class Team {
    - name: String
    - roster: List<Politician>
    - mvp: Politician
    - bust: Politician

    + Team(name: String)
    + Team(other: Team)
    + addPolitician(p: Politician): void
    + getRoster(): List<Politician>
    + calculateWeeklyScore(strategy: ScoringStrategy, week: int): double
    + getMVP(strategy: ScoringStrategy, week: int): Politician
    + getBust(strategy: ScoringStrategy, week: int): Politician
    + getName(): String
}

' ===========================
'            Match
' ===========================
class Match {
    - playerOneTeam: Team
    - playerTwoTeam: Team
    - playerOneScore: double
    - playerTwoScore: double

    + Match(playerOneTeam: Team, playerTwoTeam: Team)
    + play(strategy: ScoringStrategy, week: int): void
    + getWinner(): MatchResults
    + isTie(): boolean
}

enum MatchResults {
    PLAYER_ONE
    PLAYER_TWO
    TIE
}

' ===========================
'            Week
' ===========================
class Week {
    - weekNumber: int
    - matches: List<Match>

    + Week(weekNumber: int, matches: List<Match>)
    + simulateWeek(strategy: ScoringStrategy): void
    + getMatches(): List<Match>
    + getWeekNumber(): int
}

' ===========================
'     ScoringStrategy + Impl
' ===========================
interface ScoringStrategy {
    + calculateScore(p: Politician, week: int): double
}

class PortfolioProfitStrategy {
    - priceMap: Map<String, Double>

    + PortfolioProfitStrategy()
    + calculateScore(p: Politician, week: int): double
}

ScoringStrategy <|.. PortfolioProfitStrategy



' ===========================
'        Relationships
' ===========================
TradeScrubber --> Trade
PoliticianFactory --> Politician
Politician --> TradeHistory
TradeHistory --> Trade
Team --> Politician
Match --> Team
Week --> Match
Season --> Week
DraftManager --> Politician
DraftManager --> Team
Match --> ScoringStrategy
Trade --> TradeType

Match --> MatchResults


@enduml
